feat(notification): make domain notification, update related fields, add otp email feature after regis, and setup mailtrap and midtrans (#9)
* feat(notification): make domain notification, update related fields, add otp email feature after regis, and setup mailtrap and midtrans

* feat(notification): make domain notification, update related fields, add otp email feature after regis, and setup mailtrap and midtrans
